# bazel-jest-symlink-repro

./: .gitignore  .swcrc  BUILD.bazel  MODULE.bazel  README.md  bazel-bazel-jest-symlink-repro  bazel-bin  bazel-out  bazel-testlogs  jest.config.js  package.json  pnpm-lock.yaml  repro.sh
src/: BUILD.bazel  hook.test.tsx  hook.ts  store.ts
