load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

js_library(
    name = "jest_config",
    srcs = ["jest.config.js"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "swcrc",
    srcs = [".swcrc"],
    visibility = ["//visibility:public"],
)

exports_files(["package.json"])
