load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

js_library(
    name = "store",
    srcs = ["store.ts"],
    deps = [
        "//:node_modules/react",
    ],
)

js_library(
    name = "hook",
    srcs = ["hook.ts"],
    deps = [
        ":store",
        "//:node_modules/@tanstack/react-query",
        "//:node_modules/react",
    ],
)

jest_test(
    name = "hook.test",
    srcs = ["hook.test.tsx"],
    config = "//:jest_config",
    data = [
        ":hook",
        ":store",
        "//:node_modules/@swc/core",
        "//:node_modules/@swc/jest",
        "//:node_modules/@tanstack/react-query",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
        "//:node_modules/@types/react",
        "//:node_modules/jest",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:package.json",
        "//:swcrc",
    ],
    node_modules = "//:node_modules",
)
