load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_js//js:defs.bzl", "js_library")

# Mimics BenchSci's ts_project macro: data = srcs + data
# This causes source files to appear as BOTH copies (from srcs)
# AND symlinks (from data) in the runfiles tree.
# Jest may resolve the symlink version, escaping the sandbox.
js_library(
    name = "store",
    srcs = ["store.ts"],
    data = ["store.ts"],
    deps = [
        "//:node_modules/react",
    ],
)

js_library(
    name = "hook",
    srcs = ["hook.ts"],
    data = ["hook.ts"],
    deps = [
        ":store",
        "//:node_modules/@tanstack",
        "//:node_modules/react",
    ],
)

jest_test(
    name = "hook.test",
    config = "//:jest_config",
    data = [
        "hook.test.tsx",
        ":hook",
        ":store",
        "//:node_modules/@swc/core",
        "//:node_modules/@swc/jest",
        "//:node_modules/@tanstack",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types",
        "//:node_modules/jest",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:package_json",
        "//:swcrc",
    ],
    node_modules = "//:node_modules",
)
